# ebpf_decoder

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
config/: intercept.yaml
docs/: ARCHITECTURE.md  DEVELOPER_MANUAL.md  EBPF_BEGINNER_GUIDE.md  RUST_BEGINNER_GUIDE.md
kernel/common/: helpers.h  maps.h  structs.h
kernel/layer1_tc/: tc_stateful.bpf.c
kernel/layer1_xdp/: xdp_edge.bpf.c
kernel/layer2_capture/: socket_filter.bpf.c  uprobe_tls.bpf.c
kernel/layer3_data/: dynptr_handler.bpf.c
kernel/layer4_transport/: cgroup_sockops.bpf.c  ringbuf_producer.bpf.c  sk_msg_intercept.bpf.c  user_ringbuf_consumer.bpf.c
scripts/: load_pipeline.sh  unload_pipeline.sh
tests/unit/: json_parser_test.rs
userspace/config_injector/: Cargo.toml
userspace/config_injector/src/: main.rs  structs.rs
userspace/decoder/: Cargo.toml
userspace/decoder/src/: backpressure.rs  json_parser.rs  main.rs  structs.rs  test_map_fd.rs
userspace/loader/: Cargo.toml
userspace/loader/src/: btf_check.rs  config.rs  loader.rs  main.rs  maps.rs
userspace/loader/tests/: integration_test.rs
